src/objects/Website_Product__c.object
<CustomObject>
    <fields>
        <fullName>Delete_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to inform that related Website product is not deleted but user did delete product action from Blackpurl</description>
        <inlineHelpText>Checkbox to inform that related Website product is not deleted but user did delete product action from Blackpurl</inlineHelpText>
        <label>Delete Pending?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
    	<fullName>Group_Id__c</fullName>
        <description>This will be used for grouping variants. This will be the Internal product Id if populated else will be the product Id.</description>
        <formula>IF(
            !ISBLANK(Product_Id__c),
            Product_Id__c,
            Internal_Product_Id__c
        )</formula>
        <inlineHelpText>This will be used for grouping variants. This will be the Internal product Id if populated else will be the product Id.</inlineHelpText>
        <label>Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Product_Id__c</fullName>
        <description>This Id is useful while creating new variants from Blackpurl for one product.</description>
        <inlineHelpText>This Id is useful while creating new variants from Blackpurl for one product.</inlineHelpText>
        <label>Internal Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Website_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option_Label_1__c</fullName>
        <description>Variant Option Label 1</description>
        <inlineHelpText>Variant Option Label 1</inlineHelpText>
        <label>Option Label 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Label_2__c</fullName>
        <description>Variant Option Label 2</description>
        <inlineHelpText>Variant Option Label 2</inlineHelpText>
        <label>Option Label 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Label_3__c</fullName>
        <description>Variant Option Label 3</description>
        <inlineHelpText>Variant Option Label 3</inlineHelpText>
        <label>Option Label 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Value_1__c</fullName>
        <description>Variant Option Value 1</description>
        <inlineHelpText>Variant Option Value 1</inlineHelpText>
        <label>Option Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Value_2__c</fullName>
        <description>Variant Option Value 2</description>
        <inlineHelpText>Variant Option Value 2</inlineHelpText>
        <label>Option Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Value_3__c</fullName>
        <description>Variant Option Value 3</description>
        <inlineHelpText>Variant Option Value 3</inlineHelpText>
        <label>Option Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked Blackpurl Part</description>
        <inlineHelpText>Linked Blackpurl Part</inlineHelpText>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Website Products</relationshipLabel>
        <relationshipName>Website_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Website product Id</description>
        <inlineHelpText>Website product Id</inlineHelpText>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_URL__c</fullName>
        <description>Website product URL</description>
        <formula>if(AND($Setup.Shopify_Configuration__c.Product_Base_URL__c != null, Product_Id__c != null), $Setup.Shopify_Configuration__c.Product_Base_URL__c + Product_Id__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Website product URL</inlineHelpText>
        <label>Product URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vendor__c</fullName>
        <description>Website product vendor name</description>
        <inlineHelpText>Website product vendor name</inlineHelpText>
        <label>Product Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_as_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to display the status of Product on website.</description>
        <inlineHelpText>Checkbox to display the status of Product on website.</inlineHelpText>
        <label>Publish as Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retry_Attempt_Counter__c</fullName>
        <label>Retry Attempt Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopify_Sparse_Update_Fields__c</fullName>
        <description>Comma separated list of fields API name used for Shopify sparse update</description>
        <inlineHelpText>Comma separated list of fields API name used for Shopify sparse update</inlineHelpText>
        <label>Shopify Sparse Update Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Product status</description>
        <inlineHelpText>Product status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Linked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syncing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Product title. All variants should have same product title.</description>
        <inlineHelpText>Product title. All variants should have same product title.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Unique Id in Blackpurl. This is combination of Website Product Id and Variant Id joined by dot (.)</description>
        <formula>IF(
	ISBLANK(Variant_Id__c),
	Product_Id__c,
	Product_Id__c + &apos;.&apos; + Variant_Id__c
)</formula>
        <inlineHelpText>Unique Id in Blackpurl. This is combination of Website Product Id and Variant Id joined by dot (.)</inlineHelpText>
        <label>Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Id__c</fullName>
        <description>Website Variant Id</description>
        <inlineHelpText>Website Variant Id</inlineHelpText>
        <label>Variant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Options__c</fullName>
        <description>Variant option values, separated by comma.</description>
        <formula>if(!ISBLANK(Option_Value_1__c), 
(if(ISBLANK(Option_Value_2__c), Option_Value_1__c, Option_Value_1__c &amp; &quot;,&quot;)) 
, null) &amp;
if(!ISBLANK(Option_Value_2__c) , Option_Value_2__c , null) &amp;
if(!ISBLANK(Option_Value_3__c) , 
(if(ISBLANK(Option_Value_2__c), 
(if(ISBLANK(Option_Value_1__c), Option_Value_3__c, &quot;,&quot; &amp; Option_Value_3__c )), &quot;,&quot; &amp; Option_Value_3__c))
, null)</formula>
        <inlineHelpText>Variant option values, separated by comma.</inlineHelpText>
        <label>Variant Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Position__c</fullName>
	    <description>Position returned from &quot;fetch product by product id from store&quot; API call</description>
	    <label>Variant Position</label>
	    <precision>18</precision>
	    <scale>0</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_API_Response__c</fullName>
        <description>API response while product is syncing to website</description>
        <inlineHelpText>API response while product is syncing to website</inlineHelpText>
        <label>Website API Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Website Product</label>
    <listViews>
        <fullName>Detailed</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_Vendor__c</columns>
        <columns>Status__c</columns>
        <columns>Part__c</columns>
        <columns>Delete_Pending__c</columns>
        <columns>Unique_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed</label>
    </listViews>
    <nameField>
        <displayFormat>WP-{00000000}</displayFormat>
        <label>Website Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>